<resources>
    <string name="next">Suivant</string>
    <string name="previous">Précédent</string>
    <string name="done">Terminé</string>
    <string name="card_holder_name_sample">Jean Dupont</string>
</resources>
