<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardBackgroundColor="@android:color/white"
    android:padding="@dimen/padding_small">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:orientation="vertical"
        android:padding="@dimen/margin_small"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_large">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="EXPIRATION"/>

            <EditText
                android:id="@+id/card_expiry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="MM/YY"
                android:inputType="number"
                android:maxLength="5"
                android:text="" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>